discussion/kv_engine/183241/183241_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54452: Reduce the amount of logging for FreeConnPoolSize

ns_server can't "optionally" put members in memcached.json, instead
it'll always put them there with a "default value".

To avoid logging that it changed from <somevalue> to 0 every time
the file gets reloaded we'll compare the two calculated numbers
and compare them (and update if they change)

Change-Id: Idd832597ec62c4bcbfc817d92b201f4dccdd347c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-11-25 08:33:43.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-25 08:33:55.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326375/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-25 08:43:11.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/560/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/settings.cc:1023:47: error: expected ")" [clang-diagnostic-error]
                     getFreeConnectionPoolSize{},
                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/settings.cc:1022:13: note: to match this "("
            LOG_INFO("Change free connections pool size from {} to {}",
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/logger/logger.h:175:23: note: expanded from macro "LOG_INFO"
#define LOG_INFO(...) CB_LOG_ENTRY(spdlog::level::level_enum::info, __VA_ARGS__)
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/logger/logger.h:159:26: note: expanded from macro "CB_LOG_ENTRY"
            _logger_->log(severity, CHECK_FMT_STRING(fmt), __VA_ARGS__); \
                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/560/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/settings.cc:1023:47:
error: expected ")" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/560/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/540/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/daemon/settings.cc:1023:47:
error: expected ")"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/540/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/713/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/daemon/settings.cc(1024): error C3321: an initializer list is unexpected in this context ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/713/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/579/ : FAILURE

Compile error at [2022-11-25T08:35:00.218Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/daemon/settings.cc:1023:47:
error: expected ")"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/579/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/569/ : FAILURE

Compile error at [2022-11-25T08:38:06.051Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/daemon/settings.cc:1023:47:
error: expected ")"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/569/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/813/ : FAILURE

Compile error at [2022-11-25T08:40:40.797Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/daemon/settings.cc:1023:47:
error: expected ")"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/813/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/568/ : FAILURE

Compile error at [2022-11-25T08:37:18.381Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/daemon/settings.cc:1023:47:
error: expected ?)? before ?{? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/568/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/552/ : FAILURE

Compile error at [2022-11-25T08:37:36.961Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/daemon/settings.cc:1023:47:
error: expected ")"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/552/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/578/ : FAILURE

Compile error at [2022-11-25T08:37:28.095Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/daemon/settings.cc:1023:47:
error: expected ?)? before ?{? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/578/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/558/ : FAILURE

Compile error at [2022-11-25T08:39:30.646Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/daemon/settings.cc:1023:47:
error: expected ?)? before ?{? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/558/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21393/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
